--- a/jobs/mongodb-server/templates/bin/generate_ssl_cert.sh.erb
+++ b/jobs/mongodb-server/templates/bin/generate_ssl_cert.sh.erb
@@ -11,19 +11,23 @@ cd ${MONGODB_SSL}
 touch .rnd
 export RANDFILE="${MONGODB_SSL}"/.rnd
 
+#create ca_chain
+
+cat mongodb.crt root.crt >chain.crt
+
 # generate only if client and server keys doesnt already exists
 if [ ! -f ${MONGODB_SSL}/server.pem -o ! -f ${MONGODB_SSL}/client.pem ]
 then
-	<%- mongo__current_ip = spec.ip -%>
+	<%- current_ip = spec.ip -%>
 	perl -e 'my $n1=int(rand(10));my $n2=int(rand(10));print "$n1$n2\n"' > mongodb.srl # two random digits number
 	openssl genrsa -out server.key 2048
-	openssl req -key server.key -new -out server.req -subj  "/C=FR/ST=IDF/O=Cloud Foundry/CN=<%= mongo__current_ip -%>/emailAddress=user@domain.com"
-	openssl x509 -req -in server.req -CA mongodb.ca -CAkey mongodb.pem -CAserial mongodb.srl -out server.crt -days 3650
+	openssl req -key server.key -new -out server.req -subj  "/C=FR/ST=IDF/O=Cloud Foundry/CN=<%= current_ip -%>/emailAddress=user@domain.com"
+	openssl x509 -req -in server.req -CA root.crt -CAkey root.key -CAserial mongodb.srl -out server.crt -days 3650
 	cat server.key server.crt > server.pem
 
 	openssl genrsa -out client.key 2048
-	openssl req -key client.key -new -out client.req -subj "/C=FR/ST=IDF/O=Cloud Foundry/CN=<%= mongo__current_ip -%>/emailAddress=user@domain.com"
-	openssl x509 -req -in client.req -CA mongodb.ca -CAkey mongodb.pem -CAserial mongodb.srl -out client.crt -days 3650
+	openssl req -key client.key -new -out client.req -subj "/C=FR/ST=IDF/O=Cloud Foundry/CN=<%= current_ip -%>/emailAddress=user@domain.com"
+	openssl x509 -req -in client.req -CA root.crt -CAkey root.key -CAserial mongodb.srl -out client.crt -days 3650
 	cat client.key client.crt > client.pem
 	#openssl verify -CAfile mongodb.ca client.pem
 
