--- a/jobs/mongodb-server/templates/bin/mongoadmin.sh.erb
+++ b/jobs/mongodb-server/templates/bin/mongoadmin.sh.erb
@@ -2,26 +2,26 @@
 
 source `dirname $(readlink --canonicalize-existing $0)`/setenv
 
-<%- if p("mongodb-server.mongo_Conf_ssl") == 0 -%>
-export MONGO_CMD="/var/vcap/jobs/${JOB_NAME}/bin/mongo.sh"
+<%- if p("mongodb-server.Conf_UseSSL") == 0 -%>
+export CMD="/var/vcap/jobs/${JOB_NAME}/bin/mongo.sh"
 <%- else -%>
-export MONGO_CMD="/var/vcap/jobs/${JOB_NAME}/bin/mongo-ssl.sh"
+export CMD="/var/vcap/jobs/${JOB_NAME}/bin/mongo-ssl.sh"
 <%- end -%>
-<%- if p("mongodb-server.mongo_DbType") == "rs" 
-     mongo_DbTypeport=p("mongodb-server.mongo_rs_port") 
-     _mongo_rsconfig = ''
+<%- if p("mongodb-server.Db_Type") == "rs" 
+     DbTypeport=p("mongodb-server.rs_port") 
+     _rsconfig = ''
      link('server').instances.each do |instance| 
-       _mongo_rsconfig = "#{_mongo_rsconfig}#{instance.address}:#{mongo_DbTypeport}," 
+       _rsconfig = "#{_rsconfig}#{instance.address}:#{DbTypeport}," 
    end
    # remove last ,
-   mongo_rsconfig = _mongo_rsconfig[0..-2]
+   rsconfig = _rsconfig[0..-2]
 end -%>
 
 export PARAM="$@"
 
 pushd /var/vcap/packages/mongodb/bin >/dev/null
-${MONGO_CMD} --host <%= p("mongodb-server.mongo_Conf_replSetName") %>/<%= mongo_rsconfig %> \
- -u <%= p("mongodb-server.mongo_DbRootAdminName") %> -p <%= p("mongodb-server.mongo_DbRootAdminPwd") %> --authenticationDatabase admin \
+${CMD} --host <%= p("mongodb-server.Conf_replSetName") %>/<%= rsconfig %> \
+ -u <%= p("mongodb-server.Db_RootAdminName") %> -p <%= p("mongodb-server.Db_RootAdminPwd") %> --authenticationDatabase admin \
  $PARAM
 popd >/dev/null
 exit 0
