--- a/jobs/mongodb-server/templates/config/mongod.conf.erb
+++ b/jobs/mongodb-server/templates/config/mongod.conf.erb
@@ -100,7 +100,7 @@ Conf_port = DbTypeport
 Conf_journalenabled = "true"
 Conf_keyFile = Sys_Db_dirCfg + "/keyfile"
 Conf_PEMKeyFile = Sys_Db_dirSSL + "/server.pem"
-Conf_CAFile = Sys_Db_dirSSL + "/mongodb.ca"
+Conf_CAFile = Sys_Db_dirSSL + "/ca_chain.crt"
 #Conf_mmapv1smallFiles = "false" #<= deprecated
 tmpjournalenabled = Conf_journalenabled
 tmpoplogSizeMB = Conf_oplogSizeMB
